cabal-version:      2.2
name:               file-uri
version:            0.1.0.0
synopsis: File URI parsing
description: Parses file:///foo/bar URIs based on RFC 8089, including windows filepaths.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de
copyright:          Julian Ospald 2024
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  System.URI.File
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , bytestring
                    , attoparsec
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite file-uri-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base
        , bytestring
        , file-uri
        , tasty
        , tasty-hunit

